--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Valentine</title>
+    <title>For my parisian love</title>
   </head>
   <body>
     <main class="container">
       <img class="cat-img" src="img/cat-0.jpg" alt="Picture of a cat" />
       <p class="title">Ты будешь моей валентинкой?</p>
       <div class="buttons">
-        <button type="button" class="btn btn--yes">Даа</button>
-        <button type="button" class="btn btn--no">Неа</button>
+        <button type="button" class="btn btn--yes">Yes</button>
+        <button type="button" class="btn btn--no">No</button>
       </div>
     </main>
 
